[tool.poetry]
name = "lineage-bundle"
version = "1.2.0"
description = "Lineage generation bundle"
readme = "README.md"
repository = "https://github.com/daipe-ai/lineage-bundle"

license = "Proprietary"

authors = [
    "Datasentics <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "lineagebundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyfony-bundles = "0.4.*"
console-bundle = "^0.5"
SQLAlchemy = "^1.3"
pyfony-sqlalchemy-bundle = "^1.0.0"
daipe-core = "^1.2"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyre-check = "^0.9.10"
black = "^20.8b1"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"
datalake-bundle = "^1.2"
pyspark = "^3"
minify-html = "^0.6.8"
pylint = "^2.12.2"

[tool.poetry.plugins."pyfony.bundle"]
create = "lineagebundle.LineageBundle:LineageBundle"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "lineagebundle"

[tool.black]
line-length = 140

[tool.pylint.basic]
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "wrong-import-order",
    "duplicate-code",
    "line-too-long",
    "bad-continuation",
    "too-many-arguments",
    "too-few-public-methods",
    "ungrouped-imports",
    "no-self-use",
    "too-many-locals",
    "too-many-instance-attributes",
]

good-names = ["e", "i", "k", "n", "f", "v", "df"]

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
pylint = "pylint src"
